[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "abhisheksatpute12",email = "abhisheksatpute12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"


[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "CLI to fetch PubMed papers with biotech affiliations"
authors = ["abhisheksatpute12"]

packages = [
    { include = "pubmed_fetcher" }
]

